welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {

	if (vacation == false) {
		if (day<=5 && day>=1) {
			"7:00"
		}
		else {
			"10:00"
		}
	
	}

	if (vacation==true) {		
		if (day<=5 && day>=1) { 
			"10:00"
		}
		else {
			"off"
		}
		
	}
}
